<resources>
    <string name="app_name">BazarUz</string>

    <string name="invalidet_login">Email xato kiritilgan</string>
    <string name="invalidet_password">6 ta belgidan kam kiritildi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="conform_message">SMS c кодом подтверждения придет на Ваш \nновый номер</string>
    <string name="your_number">Введите ваш новый номер</string>
  <!--  <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>-->
    <string name="server_btn">НА ГЛАВНУЮ</string>
    <string name="server_text">ВНУТРЕННЯЯ ОШИБКА\nСЕРВЕРА</string>
    <string name="new_number">НОВЫЙ НОМЕР</string>
    <string name="russian">Русский</string>
    <string name="private_polity">Я принимаю Правила использования и пользовательское соглашение</string>
    <string name="next">ПРОДОЛЖИТЬ</string>
    <string name="number_change_message">Вы можете сменить номер телефона.  \nВаш аккаунт и все данные будут \nперенесены на новый номер</string>
    <string name="change_number">+998 99 765–41–23</string>
    <string name="error_server_text">ВНУТРЕННЯЯ ОШИБКА \nСЕРВЕРА</string>
    <string name="change_number_text">СМЕНИТЬ НОМЕР</string>
    <string name="internet_error">Подключитесь к интернет сети \nи попробуйте еще раз.</string>
    <string name="no_internet_text">НЕТ ИНТЕРНЕТ \nСОЕДИНЕНИЯ</string>
    <string name="main">Главная</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="favorite">Любимое</string>
    <string name="about_us_text">Давно выяснено, что при оценке дизайна и \nкомпозиции читаемый текст мешает \nсосредоточиться. Lorem Ipsum используют \nпотому, что тот обеспечивает более или \nменее стандартное заполнение шаблона, а \nтакже реальное распределение букв и \nпробелов в абзацах, которое не получается \nпри простой дубликации "Здесь ваш текст.. \nЗдесь ваш текст.." </string>
    <string name="add_address">Добавить адрес</string>
    <string name="search_address">Поиск адреса</string>
    <string name="view_from_the_map">Указать на карте</string>
    <string name="Bazaar.uz">Bazaar.uz</string>
    <string name="about_us">О нас</string>
    <string name="contact">Контакты</string>
    <string name="help">Помощь</string>
    <string name="terms_of_use">Правила использования</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="FAQ">Часто задаваемые вопросы</string>
    <string name="language">Язык</string>
    <string name="uzbek">O\'zbekcha</string>

    <string name="home">Дом</string>
    <string name="work">Работа</string>
    <string name="profile_name">Имя Фамилия</string>
    <string name="profile_phone_number">+998 99 765–41–23</string>
    <string name="profile_location">Мои адреса</string>
    <string name="profile_history">История покупок</string>
    <string name="profile_language">Русский язык</string>
    <string name="profile_help">Помощь</string>
    <string name="profile_name_toolbar">Профиль</string>
    <string name="my_addresses">Мои адреса</string>
    <string name="home_adresses">Дом</string>
    <string name="add_adresses">Добавить адрес</string>
    <string name="add_adresses_home">Добавить адрес дома</string>
    <string name="add_dresses_job">Добавить адрес работы</string>
    <string name="add_adresses_other">Добавить другие адреса</string>
    <string name="addresses_text">ул.А.Темура дом-34, кв.-69</string>
    <string name="contact_text">Адрес: ул.А.Навои дом-65, офис-6 \nЭлектронная почта:</string>
    <string name="reload_text_error">ПЕРЕЗАГРУЗИТЬ</string>
    <string name="error_enable_gps_setting">nimadur</string>
    <!-- map-->
    <string name="empty_list">Ҳеч нарса топилмади!</string>
    <string name="distance">%.2f км</string>
    <string name="distance_meter">%.2f м</string>
    <string name="title_empty">Мавжуд эмас!</string>
    <string name="accept_location">Жойлашувни тасдиқлаш</string>
    <string name="search_city">Шаҳарни қидиринг…</string>
    <string name="user_location">Жойлашув</string>
    <string name="fail_post_id_not_found">Этот объект недоступен в системе!</string>
    <string name="monitoring_add">Создать</string>
    <string name="location_settings_not_allowed">Настройки местоположения не разрешены</string>

</resources>