<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uz.xia.bazar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="uz.xia.bazar.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="uz.xia.bazar.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_addresses"
        android:name="uz.xia.bazar.ui.profile.addresses.AddressesFragment"
        android:label="@string/my_addresses"
        tools:layout="@layout/fragment_addresses" />

    <fragment
        android:id="@+id/nav_add_address_map"
        android:name="uz.xia.bazar.ui.profile.addresses.add.AddLocationMapFragment"
        android:label="@string/my_addresses"
        tools:layout="@layout/fragment_add_address_map"
        />
</navigation>