<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_collapseMode="pin"
        app:navigationIcon="@drawable/back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
           android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Bazaar.uz"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textColor="@color/colorTextViolet"
        android:textSize="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text"
        android:layout_margin="16dp"
        android:textSize="16dp"
        android:textColor="@color/colorTextBlack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textColor="@color/colorTextViolet"
        android:textSize="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_text"
            android:textColor="@color/colorTextBlack"
            android:textSize="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>