<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccept">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/roboto_regulary"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_user_placeholder" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_mediumly"
                android:text="@string/profile_name"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/icon_filled_pen" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorLineGray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto_regulary"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/profile_phone_number"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/icon_filled_pen"
            app:drawableStartCompat="@drawable/ic_phone_purple" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/roboto_regulary"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/profile_location"
            android:background="@drawable/ripple_selector_item"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/icon_filled_arrow_down_profile"
            app:drawableStartCompat="@drawable/ic_location" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorLineGray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/roboto_regulary"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/profile_history"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/icon_filled_arrow_down_profile"
            app:drawableStartCompat="@drawable/ic_phone_history" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorLineGray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/roboto_regulary"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/profile_language"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/icon_filled_arrow_down_profile"
            app:drawableStartCompat="@drawable/ic_phone_language" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorLineGray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/roboto_regulary"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/profile_help"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:drawableEndCompat="@drawable/icon_filled_arrow_down_profile"
            app:drawableStartCompat="@drawable/ic_phone_help" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logotip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="120dp"
            android:text="Разработано"
            app:drawableRightCompat="@drawable/ic_logotip_simplex" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>